Fixed image uploading in the frontend at profile.js
